syntax = "proto3";

package grpc;

message Void {}

message ObjectID {
    string objectID = 1;
}

message Count{
    int64 count =1;
}

message Person {
    string documentID = 1;
    string name = 2;
    string lastName =3;
    string phone =4;
    string email =5;
    int32 yearOfBirth =6;
}

message PersonalDataList{
    repeated Person person =1;
}

service PersonalData {
    rpc List(Void) returns(PersonalDataList) {}
    rpc One(ObjectID) returns(Person) {}
    rpc Update(Person) returns(Count) {}
    rpc Insert(Person) returns(Person) {}
    rpc Remove(ObjectID) returns(Count) {}
}